external-crates/move/crates/move-compiler/tests/move_2024/naming/positional_pack_fn_call_shadow.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_2024/naming/positional_pack_fn_call_shadow.move:6:9
  │
4 │     public struct Foo(u64) has copy, drop;
  │                   --- Alias previously defined here
5 │ 
6 │     fun Foo(_x: u64) { }
  │         ^^^ Duplicate module member or alias 'Foo'. Top level names in a namespace must be unique

