external-crates/move/crates/move-compiler/tests/move_2024/naming/positional_pack_fn_call_shadow.move
module 0x42::M {
    // Valid positional field struct declaration
    public struct Foo(u64) has copy, drop;

    fun Foo(_x: u64) { }

    fun x() {
        let _x = Foo(0);
        abort 0
    }
}
